Actualizar index con nuevo párrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     </head>
     <body>
-       <p>Hola buenas como estamos</p>
+       <h1>Proyecto empresa</h1>
+        <p>GitHub es una plataforma en línea que se utiliza para almacenar, compartir y colaborar en proyectos de software. Es un repositorio donde los programadores podemos guardar el código, hacer cambios y mantener un historial de todas las versiones del proyecto.</p>
     </body>
 </html>
